# aprilcube

./: .gitignore  README.md  detect_cube.py  generate_cube.py  generate_models.sh  pyproject.toml
examples/: benchmark.py  example_intrinsic.json  record.py  webcam_demo.py  webcam_simple.py  webcam_viser.py
models/1x1x1_24_cube/: README.md  config.json  cube.3mf
models/1x1x1_30_cube/: README.md  config.json  cube.3mf
models/2x1x1_24_cube/: README.md  config.json  cube.3mf
models/2x1x1_30_cube/: README.md  config.json  cube.3mf
models/2x2x1_24_cube/: README.md  config.json  cube.3mf
models/2x2x1_30_cube/: README.md  config.json  cube.3mf
models/2x2x2_24_cube/: README.md  config.json  cube.3mf
models/2x2x2_30_cube/: README.md  config.json  cube.3mf
models/3x1x1_24_cube/: README.md  config.json  cube.3mf
models/3x1x1_30_cube/: README.md  config.json  cube.3mf
models/3x2x1_24_cube/: README.md  config.json  cube.3mf
models/3x2x1_30_cube/: README.md  config.json  cube.3mf
models/3x2x2_30_cube/: README.md  config.json  cube.3mf
models/3x3x1_24_cube/: README.md  config.json  cube.3mf
models/3x3x1_30_cube/: README.md  config.json  cube.3mf
models/3x3x2_30_cube/: README.md  config.json  cube.3mf
models/3x3x3_24_cube/: README.md  config.json  cube.3mf
models/3x3x3_30_cube/: README.md  config.json  cube.3mf
models/4x3x1_24_cube/: README.md  config.json  cube.3mf
models/4x3x1_30_cube/: README.md  config.json  cube.3mf
models/5x3x1_30/: README.md  (+2 more)
test_dim/: config.json  cube.3mf
tests/: README.md  test_detection.py  test_multicam.py
(+28 files in other folders)
