[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aprilcube"
version = "0.1.0"
description = "Generate and detect ArUco/AprilTag cubes for 6-DOF pose estimation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "opencv-contrib-python>=4.8",
    "numpy>=1.24",
]

[project.scripts]
aprilcube = "aprilcube.cli:main"
